# torcwa

./: LICENSE  README.md  pyproject.toml
.github/workflows/: pylint.yml
example/: Example0.ipynb  Example1-1.ipynb  Example1.ipynb  Example2.ipynb  Example3.ipynb  Example4.ipynb  Example5.ipynb  Example6.ipynb
src/solwa/: rcwa.py  utils.py
torcwa/: __init__.py  geometry.py  materials.py  rcwa.py  torch_eig.py  utils.py
