[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solwa"
version = "0.1.0"
description = "Differentiable RCWA in PyTorch, based on TORCWA"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "LGPL-3.0-or-later" }
authors = [{ name = "Johannes Zeiser" }]
dependencies = [
  "torch>=2.0",
  "numpy",
  "scipy",
]

[project.urls]
Repository = "https://github.com/johannesz-codes/solwa"
Issues = "https://github.com/johannesz-codes/solwa/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["solwa*"]
